--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,16 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.*
+
+### yarn ###
+# unused Zero-Install
 .yarn/*
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
 !.yarn/versions
+.pnp.*
 
 # testing
 /coverage
